5/28 BS 1.1 版本 增加了 NAVBAR

--- a/BulidSchool/index.html
+++ b/BulidSchool/index.html
@@ -8,6 +8,16 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/webp" href="/BulidSchool/img/buildschool.webp">
     <style>
+        a.navbar-brand span{
+            font-size: 30px;
+        }
+        a.navbar-brand{
+            text-align: end;
+            font-size: 12px;
+        }
+        li.nav-item{
+            font-size: 13px;
+        }
         .col-12.col-md-6.align-self-center{
             padding: 0 80px;
         }
@@ -30,6 +40,10 @@
         .banner {
             background-image: linear-gradient(rgba(75, 100, 150, 0.8), rgba(75, 100, 150, 0.8)), url(./img/bannerbg.webp);
             background-position: center;
+            height: 129px;letter-spacing: 0.15em;
+            margin-bottom: 50px;
+            padding:0 20px;
+            text-align: center;
         }
         ul li{
             font-size: 16px;
@@ -39,6 +53,44 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="./img/buildschool.webp" width="54px" alt=""></a>
+            <a class="navbar-brand" href="#"><span> Build School</span><br>developer career builder</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">首頁</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">台北班簡介</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">新竹班簡介</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">校友會-台灣青築未來協會 Build the Future</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">歷屆老師</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">問題洽詢</a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                </form>
+            </div>
+        </div>
+    </nav>
     <div class="container-xl">
         <div class="row g-5 mx-auto" style="margin-bottom: 200px;">
             <div class="col-12 col-md-6 align-self-center">
@@ -85,8 +137,7 @@
             </div>
         </div>
     </div>
-    <div class="banner d-flex justify-content-center align-items-center text-white fw-bold"
-        style="height: 129px;letter-spacing: 0.15em;margin-bottom: 50px;">
+    <div class="banner d-flex justify-content-center align-items-center text-white fw-bold">
         18 - 24週的實作及作品開發 - 從訓練、就業、到企業連結
     </div>
     <div class="container-xl">
@@ -131,8 +182,7 @@
             </div>
         </div>
     </div>
-    <div class="banner d-flex justify-content-center align-items-center text-white fw-bold"
-        style="height: 129px;letter-spacing: 0.15eml;margin-bottom: 50px;">
+    <div class="banner d-flex justify-content-center align-items-center text-white fw-bold">
         在課程及作品實作中，將採用這些工具 - 熟悉實務上軟體開發團隊的運作、分工及真實專案的流程
     </div>
     <div class="container-xl">
@@ -172,8 +222,7 @@
             </div>
         </div>
     </div>
-    <div class="banner d-flex justify-content-center align-items-center text-white fw-bold"
-        style="height: 129px;letter-spacing: 0.15em;margin-bottom: 20px;">
+    <div class="banner d-flex justify-content-center align-items-center text-white fw-bold">
         我們的講師及企業導師擁有在這些公司的工作經歷、擔任主管或資深工程師
     </div>
     <div class="container-xl">
