5/28 BS 1.1 版本 限制了 NAVBAR 閱讀程度大小

--- a/BulidSchool/index.html
+++ b/BulidSchool/index.html
@@ -54,7 +54,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+        <div class="container-xl">
             <a class="navbar-brand" href="#"><img src="./img/buildschool.webp" width="54px" alt=""></a>
             <a class="navbar-brand" href="#"><span> Build School</span><br>developer career builder</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
