--- a/BulidSchool/index.html
+++ b/BulidSchool/index.html
@@ -15,6 +15,9 @@
             text-align: end;
             font-size: 12px;
         }
+        .bg-dark{
+            background-color: wheat;
+        }
         li.nav-item{
             font-size: 13px;
         }
@@ -53,7 +56,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-xl">
             <a class="navbar-brand" href="#"><img src="./img/buildschool.webp" width="54px" alt=""></a>
             <a class="navbar-brand" href="#"><span> Build School</span><br>developer career builder</a>
@@ -65,25 +68,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">首頁</a>
+                        <a class="nav-link fw-bold" href="#">台北班簡介</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">台北班簡介</a>
+                        <a class="nav-link fw-bold" href="#">新竹班簡介</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">新竹班簡介</a>
+                        <a class="nav-link fw-bold" href="#">校友會-台灣青築未來協會 Build the Future</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">校友會-台灣青築未來協會 Build the Future</a>
+                        <a class="nav-link fw-bold" href="#">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link fw-bold" href="#">歷屆老師</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">歷屆老師</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">問題洽詢</a>
+                        <a class="nav-link fw-bold" href="#">問題洽詢</a>
                     </li>
                 </ul>
                 <form class="d-flex">
