--- a/BulidSchool/index.html
+++ b/BulidSchool/index.html
@@ -34,6 +34,9 @@
             margin-top: 20px;
             margin-bottom: 50px;
         }
+        .text-danger.text-center{
+            margin-top: 50px;
+        }
         h3{
             font-size: 20px;
         }
