5/28 BS 1.2 優化原始碼

--- a/BulidSchool/index.html
+++ b/BulidSchool/index.html
@@ -89,8 +89,6 @@
                         <a class="nav-link fw-bold" href="#">問題洽詢</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                </form>
             </div>
         </div>
     </nav>
@@ -107,7 +105,7 @@
             <div class="col-12 col-md-6 align-self-center">
                 <h3 class="text-center fw-bold">實作及就業導向的軟體開發學校</h3>
                 <p>因應數位新時代的來臨，軟體、App、IoT
-                    、SaaS、雲端平台的應用需求大爆炸，軟體工程師的招募需求持續上升，以2016年5月求職平台的統計資料，從高科技、電商、金融、傳產、網路服務、軟體資訊、新創等各行業，台灣至少有 27,000
+                    、SaaS，雲端平台的應用需求大爆炸，軟體工程師的招募需求持續上升，以2016年5月求職平台的統計資料，從高科技、電商、金融、傳產、網路服務、軟體資訊、新創等各行業，台灣至少有 27,000
                     位軟體開發工程師的職缺，甚至日本、新加坡等軟體及App 外商也來台灣求才。</p>
                 <p>為了彌補企業求才所需技能及實務教學上的落差，我們希望能幫助想搭上軟體開發及數位經濟這艘火箭的學員們，打造更有競爭力的職涯!</p>
             </div>
