5/29 BS background-position 固定

--- a/BulidSchool/index.html
+++ b/BulidSchool/index.html
@@ -40,7 +40,9 @@
             font-size: 12px;
         }
         .bg-dark{
-            background-color: wheat;
+            background-image: linear-gradient(rgba(75, 100, 150, 0.8), rgba(75, 100, 150, 0.8)), url(./img/bannerbg.webp);
+            background-position: 50% 0%;
+            background-color: transparent !important;
         }
         li.nav-item{
             font-size: 13px;
@@ -69,8 +71,9 @@
         }
         .banner {
             background-image: linear-gradient(rgba(75, 100, 150, 0.8), rgba(75, 100, 150, 0.8)), url(./img/bannerbg.webp);
-            background-position: center;
-            height: 129px;letter-spacing: 0.15em;
+            background-position: 50%;
+            height: 129px;
+            letter-spacing: 0.15em;
             margin-bottom: 50px;
             padding:0 20px;
             text-align: center;
