--- a/BulidSchool/index.html
+++ b/BulidSchool/index.html
@@ -7,21 +7,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/webp" href="/BulidSchool/img/buildschool.webp">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
     <style>
-        .square{
-            width: 85px; 
-            height: 55px; 
+
+        .square {
+            width: 85px;
+            height: 55px;
             border: 7px solid black;
-            box-shadow:5px 5px 5px 0px #aaa;
+            box-shadow: 5px 5px 5px 0px #aaa;
         }
-        .line{
+
+        .line {
             margin-top: 17px;
             width: 45px;
             height: 7px;
             background-color: red;
             transform: rotate(-45deg);
         }
-        .triangle{
+
+        .triangle {
             margin: auto;
             position: relative;
             top: 0;
@@ -32,53 +38,71 @@
             border-width: 10px 10px 0 10px;
             border-color: #000000 transparent transparent transparent;
         }
-        a.navbar-brand span{
+
+        a.navbar-brand span {
             font-size: 30px;
         }
-        a.navbar-brand{
+
+        a.navbar-brand {
             text-align: end;
             font-size: 12px;
         }
-        .bg-dark{
-            background-image: linear-gradient(rgba(75, 100, 150, 0.8), rgba(75, 100, 150, 0.8)), url(./img/bannerbg.webp);
+
+        .bg-dark {
+            z-index: 1;
+            position: sticky;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-image: linear-gradient(rgba(40, 60, 100, 0.8), rgba(40, 60, 100, 0.8)), url(./img/bannerbg.webp);
             background-position: 50% 0%;
             background-color: transparent !important;
         }
-        li.nav-item{
+
+        li.nav-item {
             font-size: 13px;
         }
-        .col-12.col-md-6.align-self-center{
+
+        .col-12.col-md-6.align-self-center {
             padding: 0 80px;
         }
-        .col-12.col-md-6.align-self-center h3{
+
+        .col-12.col-md-6.align-self-center h3 {
             margin-bottom: 20px;
         }
-        .col-12.col-md-6.align-self-center p{
-            font-size:  17px;
+
+        .col-12.col-md-6.align-self-center p {
+            font-size: 17px;
         }
-        .text-center.fw-bold{
+
+        .text-center.fw-bold {
             margin-top: 20px;
             margin-bottom: 50px;
         }
-        .text-danger.text-center{
+
+        .text-danger.text-center {
             margin-top: 50px;
         }
-        h3{
+
+        h3 {
             font-size: 20px;
         }
-        .row{
+
+        .row {
             margin-bottom: 50px;
         }
+
         .banner {
-            background-image: linear-gradient(rgba(75, 100, 150, 0.8), rgba(75, 100, 150, 0.8)), url(./img/bannerbg.webp);
+            background-image: linear-gradient(rgba(40, 60, 100, 0.8), rgba(40, 60, 100, 0.8)), url(./img/bannerbg.webp);
             background-position: 50%;
             height: 129px;
             letter-spacing: 0.15em;
             margin-bottom: 50px;
-            padding:0 20px;
+            padding: 0 20px;
             text-align: center;
         }
-        ul li{
+
+        ul li {
             font-size: 16px;
         }
     </style>
@@ -86,6 +110,8 @@
 </head>
 
 <body>
+
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-xl">
             <a class="navbar-brand" href="#"><img src="./img/buildschool.webp" width="54px" alt=""></a>
@@ -126,7 +152,7 @@
                     <div class="line mx-auto">
                     </div>
                 </div>
-            <div class="triangle"></div>
+                <div class="triangle"></div>
                 <h3 class="text-center fw-bold">Build School</h3>
                 <h3 class="text-center fw-bold">/*我們的理念*/</h3>
                 <p>Build = 將程式碼編譯及建置成<span class="text-decoration-underline">可執行的軟體</span></p>
@@ -224,7 +250,8 @@
                 <img class="mx-auto d-block" style="margin-bottom: 20px;" width="120px" src="./img/cat.webp" alt="">
                 <h3 class="text-center">版本控管及程式碼管理</h3>
                 <ul>
-                    <li>學員之練習及作品之程式碼，皆採用主流的 Git 當版本控管，熟悉版控的各種操作及實務專案運用; 課程中公開之練習程式碼，提交至 GitHub 上，其它學員可參考或供講師 Code Review 檢閱，並熟悉 Open Source 生態及工具</li>
+                    <li>學員之練習及作品之程式碼，皆採用主流的 Git 當版本控管，熟悉版控的各種操作及實務專案運用; 課程中公開之練習程式碼，提交至 GitHub 上，其它學員可參考或供講師 Code Review
+                        檢閱，並熟悉 Open Source 生態及工具</li>
                 </ul>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
@@ -232,24 +259,29 @@
                 <img class="mx-auto d-block" style="margin-bottom: 20px;" width="140px" src="./img/ta.webp" alt="">
                 <h3 class="text-center">作品開發及團隊管理</h3>
                 <ul>
-                    <li>除了使用 GitHub 外，專題開發階段也將使用 Microsoft Azure DevOps Services 進行團隊開發、包括程式碼管理、工作項目追蹤、自動化建置等，熟悉一個軟體開發專案之流程、分工及日常工作。</li>
+                    <li>除了使用 GitHub 外，專題開發階段也將使用 Microsoft Azure DevOps Services
+                        進行團隊開發、包括程式碼管理、工作項目追蹤、自動化建置等，熟悉一個軟體開發專案之流程、分工及日常工作。</li>
                     <li>也可透過目前許多開發團隊常用的專案管理及看板工具 - Trello 進行工作分派、追蹤、或整個班的工作事項管理</li>
                 </ul>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
-                <img class="mx-auto d-block" style="margin-top: 10px; margin-bottom: 50px;" width="140px" src="./img/az.webp" alt="">
+                <img class="mx-auto d-block" style="margin-top: 10px; margin-bottom: 50px;" width="140px"
+                    src="./img/az.webp" alt="">
                 <img class="mx-auto d-block" style="margin-bottom: 20px;" width="55px" src="./img/sql.webp" alt="">
                 <h3 class="text-center">雲端平台及服務</h3>
                 <ul>
-                    <li>雲端平台的使用已逐漸成為一個成熟軟體開發團隊之基礎，並讓開發、測試、佈署工作更加的便利及自動化。因此學員將使用 Microsoft Azure 當成作品及專案應用系統執行的雲端平台，包括 Azure App Service 建立網站服務、Azure SQL Database 建立資料庫服務</li>
+                    <li>雲端平台的使用已逐漸成為一個成熟軟體開發團隊之基礎，並讓開發、測試、佈署工作更加的便利及自動化。因此學員將使用 Microsoft Azure 當成作品及專案應用系統執行的雲端平台，包括
+                        Azure App Service 建立網站服務、Azure SQL Database 建立資料庫服務</li>
                 </ul>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
-                <img class="mx-auto d-block" style="margin-top: 10px; margin-bottom: 50px;" width="210px" src="./img/teams.webp" alt="">
+                <img class="mx-auto d-block" style="margin-top: 10px; margin-bottom: 50px;" width="210px"
+                    src="./img/teams.webp" alt="">
                 <img class="mx-auto d-block" style="margin-bottom: 20px;" width="140px" src="./img/sl.webp" alt="">
                 <h3 class="text-center">團隊溝通協作及通知</h3>
                 <ul>
-                    <li>課程過程中的線上討論、遠端溝通、或技術分享，將可透過 Microsoft Teams 或Slack 工具。另外練習的程式碼提交至 GitHub、或是 Trello 上的工作狀態更新，或是 Azure DevOps 上自動化建置的狀態，皆可發通知至 Microsoft Teams 或 Slack，透過自動化提升工作效率，並熟悉一個軟體開發團隊的協同合作</li>
+                    <li>課程過程中的線上討論、遠端溝通、或技術分享，將可透過 Microsoft Teams 或Slack 工具。另外練習的程式碼提交至 GitHub、或是 Trello 上的工作狀態更新，或是
+                        Azure DevOps 上自動化建置的狀態，皆可發通知至 Microsoft Teams 或 Slack，透過自動化提升工作效率，並熟悉一個軟體開發團隊的協同合作</li>
                 </ul>
             </div>
         </div>
@@ -283,17 +315,22 @@
             <div class="row mx-auto" style="margin-bottom: 0;">
                 <div class="col-12 col-md-6">
                     <h4 style="margin-top: 10px;font-size: 20px; ">合作及接洽</h4>
-                    <p style="font-size: 16px;">若為企業欲徵才、或非營利組織或公益團體希望參加我們的培訓或公益合作、或成為我們的講師或擔任指導學生的企業導師 (Inspire Mentor)，請與我們連絡</p>
+                    <p style="font-size: 16px;">若為企業欲徵才、或非營利組織或公益團體希望參加我們的培訓或公益合作、或成為我們的講師或擔任指導學生的企業導師 (Inspire
+                        Mentor)，請與我們連絡</p>
                 </div>
                 <div class="col-12 col-md-6">
                     <h4 style="margin-top: 10px; font-size: xx-small;">Build School​ 青杉人才有限公司 | 青群科技有限公司</h4>
-                    <p style="font-size: xx-small;">社團法人台灣青築未來協會 Build the Future<br>(內政部立案 : 台內團字第 1090033261 號)<br>email: contact@build-school.com 電話: 02-66057606<br>​台北市忠孝東路三段96號11F-1 (台北科大對面/忠孝新生站3號出口)</p>
+                    <p style="font-size: xx-small;">社團法人台灣青築未來協會 Build the Future<br>(內政部立案 : 台內團字第
+                        1090033261號)<br>email: contact@build-school.com 電話: 02-66057606<br>​台北市忠孝東路三段96號11F-1
+                        (台北科大對面/忠孝新生站3號出口)
+                    </p>
                 </div>
                 <div class="col-12" style=" margin-bottom: 10px;">
                     <img src="./img/fb.webp" width="28px" style="margin-right: 5px;" alt="">
                     <img src="./img/yt.webp" width="28px" style="margin-right: 5px;" alt="">
                     <a style="font-size: xx-small; color: #000; text-decoration: none;" href="#">隱私權宣告</a>
-                    <p class="d-flex justify-content-end" style="font-size: xx-small;">© 2021 by Build School</p>
+                    <span class="float-end" style="font-size: xx-small; margin-top: 10px; ">© 2021 by Build
+                        School</span>
                 </div>
             </div>
         </div>
