--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <div class="jumbotron">
-        <h1>Pokemon圖鑑列表</h1>
+    <div class="jumbotron text-center">
+        <h1>寶可夢圖鑑列表</h1>
     </div>
     <div class="div class='container text-center">
         <button class="btn btn-primary" onclick="fetchPokemon()">寶可夢圖鑑列表fetchPokemon()</button>
